# stoner_wolhfarth

./: LICENSE  main.py  pyproject.toml
