[tool.poetry]
name = "repl-nix-stonerwolhfarth"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_stonerwolhfarth"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
